--- a/INFO5731_Fall2023_Prasanna_Malreddy_Assignment_1_.ipynb
+++ b/INFO5731_Fall2023_Prasanna_Malreddy_Assignment_1_.ipynb
@@ -129,9 +129,10 @@
       "source": [
         "import string\n",
         "import re\n",
+        "\n",
         "str1=input(\"Enter first sentence: \")\n",
         "str2=input(\"Enter second sentence: \")\n",
-        "\n",
+        "# Converting the sentence into a list of words\n",
         "list1 = [word for word in re.findall(r'\\b\\w+\\b|[^\\w\\s]', str1)]\n",
         "list2 = [word for word in re.findall(r'\\b\\w+\\b|[^\\w\\s]', str2)]\n",
         "print(\"First sentence into List: \",list1)\n",
